<resources>
    <string name="app_name">RapiSolverApp</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Correo">Correo:</string>
    <string name="Contraseña">Contraseña:</string>
    <string name="Ingresar">Ingresar</string>
    <string name="Propuesta">¿Aún no estás registrado?</string>
    <string name="Registrate">Registrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Servicio">Servicio:</string>
    <string name="Categoria">Categoria :</string>
    <string name="Costo">Costo :</string>
    <string name="NoEncontrado">No se encontro servicios</string>
    <string name="Descripcion">Descripcion :</string>
    <string name="Calificacion">Calificación :</string>
    <string name="Contactar">Contactar</string>
    <string name="Calificar">Calificar</string>
    <string name="Vermas">Ver más ...</string>
    <string name="Telefono">Telefono :</string>
    <string name="Servicios">Servicios :</string>
    <string name="nombreUsuario">Nombre</string>
    <string name="img_user_description">Avatar del usuario</string>
    <string name="ubicacion_usuario">Ubicacion</string>
    <string name="usuario_telefono">Telefono</string>
    <string name="usuario_correo">Correo</string>
    <string name="btn_editar_perfil">Editar</string>
    <string name="lbl_nombres">Nombres</string>
    <string name="lbl_ubicacion">Ubicacion</string>
    <string name="lbl_telefono">Telefono:</string>
    <string name="lbl_correo">Correo:</string>
</resources>
