<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="118dp"
        android:background="@drawable/seccion_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/fotoservicio"
            app:civ_border_color="#ffffff"
            app:civ_border_width="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lblCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="156dp"
            android:layout_marginTop="19dp"
            android:text="@string/Categoria"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblNombreServicio" />

        <TextView
            android:id="@+id/lblNombreServicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="156dp"
            android:layout_marginTop="4dp"
            android:text="@string/Servicio"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lblCosto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="156dp"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="10dp"
            android:text="@string/Costo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/lblCategoria"
            app:layout_constraintVertical_bias="0.409" />

        <TextView
            android:id="@+id/nombreServicio"
            android:layout_width="129dp"
            android:layout_height="16dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="4dp"
            android:text="TextView"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/lblNombreServicio"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/costoMonto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="80dp"
            android:text="TextView"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/lblCosto"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nombreCategoria"
            android:layout_width="129dp"
            android:layout_height="19dp"
            android:layout_marginStart="9dp"
            android:layout_marginTop="40dp"
            android:text="TextView"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/lblCategoria"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>